--- a/loadbalancerfull.yaml
+++ b/loadbalancerfull.yaml
@@ -12,13 +12,9 @@
     monitor_name: "{{ lb_name }}-monitor"
     
     # Default values
-    lb_admin_state_up: "{{ lb_admin_state_up | default(true) }}"
     listener_protocol: "{{ listener_protocol | default('TCP') }}"
-    listener_admin_state_up: "{{ listener_admin_state_up | default(true) }}"
     pool_protocol: "{{ pool_protocol | default('TCP') }}"
     pool_algorithm: "{{ pool_algorithm | default('ROUND_ROBIN') }}"
-    pool_admin_state_up: "{{ pool_admin_state_up | default(true) }}"
-    monitor_admin_state_up: "{{ monitor_admin_state_up | default(true) }}"
     
     # Feature flags
     create_listener: "{{ create_listener | default(true) }}"
@@ -48,16 +44,6 @@
         fail_msg: "❌ ERRORE: listener_port deve essere tra 1 e 65535"
       when: create_listener | bool
 
-    - name: Validate pool members (if backend servers provided)
-      assert:
-        that:
-          - backend_servers is defined
-          - backend_servers | length > 0
-        fail_msg: "❌ ERRORE: backend_servers non può essere vuoto se create_pool è true"
-      when: 
-        - create_pool | bool
-        - backend_servers is defined
-
     # ========================================
     # LOGGING CONFIGURATION
     # ========================================
@@ -74,52 +60,21 @@
           IP Address:            {{ lb_ip_address | default('Auto-assign') }}
           Descrizione:           {{ lb_description | default('N/A') }}
           Subnet VIP:            {{ lb_subnet }}
-          Availability Zone:     {{ lb_availability_zone | default('N/A') }}
           Flavor:                {{ lb_flavor | default('N/A') }}
-          Admin State Up:        {{ lb_admin_state_up }}
           
           🎧 LISTENER:
           ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           Crea Listener:         {{ create_listener }}
           {% if create_listener | bool %}
-          Nome:                  {{ listener_name }}
           Protocollo:            {{ listener_protocol }}
           Porta:                 {{ listener_port | default('N/A') }}
-          Connection Limit:      {{ listener_connection_limit | default(-1) }}
-          Client Data Timeout:   {{ listener_client_data_timeout | default(50000) }}ms
-          Member Connect Timeout: {{ listener_member_connect_timeout | default(5000) }}ms
-          Member Data Timeout:   {{ listener_member_data_timeout | default(50000) }}ms
-          TCP Inspect Timeout:   {{ listener_tcp_inspect_timeout | default(0) }}ms
-          Allowed CIDRs:         {{ listener_allowed_cidrs | default('0.0.0.0/0') }}
           {% endif %}
           
           🏊 POOL:
           ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           Crea Pool:             {{ create_pool }}
           {% if create_pool | bool %}
-          Nome:                  {{ pool_name }}
-          Protocollo:            {{ pool_protocol }}
           Algoritmo:             {{ pool_algorithm }}
-          Session Persistence:   {{ pool_session_persistence | default('None') }}
-          TLS Enabled:           {{ pool_tls_enabled | default(false) }}
-          {% endif %}
-          
-          💓 HEALTH MONITOR:
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-          Crea Monitor:          {{ create_health_monitor }}
-          {% if create_health_monitor | bool %}
-          Tipo:                  {{ monitor_type | default('TCP') }}
-          Delay:                 {{ monitor_delay | default(5) }}s
-          Timeout:               {{ monitor_timeout | default(5) }}s
-          Max Retries:           {{ monitor_max_retries | default(3) }}
-          Max Retries Down:      {{ monitor_max_retries_down | default(3) }}
-          {% endif %}
-          
-          🌐 FLOATING IP:
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-          Assegna Floating IP:   {{ assign_floating_ip | default(false) }}
-          {% if assign_floating_ip | default(false) | bool %}
-          Network:               {{ floating_ip_network | default('external_pub_vlan20') }}
           {% endif %}
 
     # ========================================
@@ -143,7 +98,7 @@
         vip_subnet: "{{ lb_subnet }}"
         vip_address: "{{ lb_ip_address | default(omit) }}"
         description: "{{ lb_description | default(omit) }}"
-        admin_state_up: "{{ lb_admin_state_up }}"
+        flavor: "{{ lb_flavor | default(omit) }}"
         state: present
         wait: yes
         timeout: 800
@@ -167,18 +122,17 @@
       block:
         - name: Create Listener
           openstack.cloud.lb_listener:
-            load_balancer: "{{ lb_name }}"
             name: "{{ listener_name }}"
-            description: "{{ listener_description | default(omit) }}"
+            loadbalancer: "{{ lb_name }}"
             protocol: "{{ listener_protocol | upper }}"
             protocol_port: "{{ listener_port | int }}"
+            description: "{{ listener_description | default(omit) }}"
             connection_limit: "{{ listener_connection_limit | default(-1) | int }}"
             timeout_client_data: "{{ listener_client_data_timeout | default(50000) | int }}"
             timeout_member_connect: "{{ listener_member_connect_timeout | default(5000) | int }}"
             timeout_member_data: "{{ listener_member_data_timeout | default(50000) | int }}"
             timeout_tcp_inspect: "{{ listener_tcp_inspect_timeout | default(0) | int }}"
             allowed_cidrs: "{{ listener_allowed_cidrs.split(',') if listener_allowed_cidrs is defined else omit }}"
-            admin_state_up: "{{ listener_admin_state_up }}"
             state: present
             wait: yes
             timeout: 120
@@ -196,13 +150,12 @@
       block:
         - name: Create Pool
           openstack.cloud.lb_pool:
+            name: "{{ pool_name }}"
             listener: "{{ listener_name if create_listener | bool else omit }}"
             loadbalancer: "{{ lb_name if not (create_listener | bool) else omit }}"
-            name: "{{ pool_name }}"
-            description: "{{ pool_description | default(omit) }}"
             protocol: "{{ pool_protocol | upper }}"
             lb_algorithm: "{{ pool_algorithm }}"
-            admin_state_up: "{{ pool_admin_state_up }}"
+            description: "{{ pool_description | default(omit) }}"
             state: present
             wait: yes
             timeout: 120
@@ -249,13 +202,12 @@
 
         - name: Add members to pool
           openstack.cloud.lb_member:
-            pool: "{{ pool_name }}"
             name: "member-{{ item.address }}-{{ item.protocol_port }}"
+            pool: "{{ pool_name }}"
             address: "{{ item.address }}"
             protocol_port: "{{ item.protocol_port }}"
             subnet_id: "{{ backend_subnet | default(lb_subnet) }}"
             weight: "{{ backend_weight | default(1) | int }}"
-            admin_state_up: true
             state: present
             wait: yes
             timeout: 120
@@ -276,15 +228,13 @@
       block:
         - name: Create Health Monitor
           openstack.cloud.lb_health_monitor:
-            pool: "{{ pool_name }}"
             name: "{{ monitor_name }}"
-            type: "{{ monitor_type | default('TCP') }}"
+            pool: "{{ pool_name }}"
+            type: "{{ monitor_type | default('TCP') | upper }}"
             delay: "{{ monitor_delay | default(5) | int }}"
             timeout: "{{ monitor_timeout | default(5) | int }}"
             max_retries: "{{ monitor_max_retries | default(3) | int }}"
             max_retries_down: "{{ monitor_max_retries_down | default(3) | int }}"
-            admin_state_up: "{{ monitor_admin_state_up }}"
-            # HTTP/HTTPS specific parameters
             http_method: "{{ monitor_http_method | default(omit) }}"
             url_path: "{{ monitor_url_path | default(omit) }}"
             expected_codes: "{{ monitor_expected_codes | default(omit) }}"
@@ -353,7 +303,7 @@
           ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           {% if pool_members_list is defined %}
           {% for member in pool_members_list %}
-          {{ loop.index }}. {{ member.address }}:{{ member.protocol_port }} (weight: {{ backend_weight | default(1) }})
+          {{ loop.index }}. {{ member.address }}:{{ member.protocol_port }}
           {% endfor %}
           {% else %}
           Nessun membro configurato
@@ -364,20 +314,7 @@
           Stato:                  {{ 'Abilitato' if create_health_monitor | bool else 'Disabilitato' }}
           {% if create_health_monitor | bool %}
           Tipo:                   {{ monitor_type | default('TCP') }}
-          Intervallo:             {{ monitor_delay | default(5) }}s
-          Timeout:                {{ monitor_timeout | default(5) }}s
           {% endif %}
-          
-          🔗 COMANDI UTILI:
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-          # Verifica stato:
-          openstack loadbalancer show {{ lb_id }}
-          
-          # Test connettività:
-          curl http://{{ lb_floating_ip }}:{{ listener_port | default(80) }}
-          
-          # Verifica membri pool:
-          openstack loadbalancer member list {{ pool_name }}
           
           ╚═══════════════════════════════════════════════════════════════════╝
 
@@ -403,7 +340,7 @@
           ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           {% if pool_members_list is defined %}
           {% for member in pool_members_list %}
-          {{ loop.index }}. {{ member.address }}:{{ member.protocol_port }} (weight: {{ backend_weight | default(1) }})
+          {{ loop.index }}. {{ member.address }}:{{ member.protocol_port }}
           {% endfor %}
           {% else %}
           Nessun membro configurato
@@ -414,38 +351,6 @@
           Stato:                  {{ 'Abilitato' if create_health_monitor | bool else 'Disabilitato' }}
           {% if create_health_monitor | bool %}
           Tipo:                   {{ monitor_type | default('TCP') }}
-          Intervallo:             {{ monitor_delay | default(5) }}s
-          Timeout:                {{ monitor_timeout | default(5) }}s
           {% endif %}
           
-          🔗 COMANDI UTILI:
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-          # Verifica stato:
-          openstack loadbalancer show {{ lb_id }}
-          
-          # Verifica listener:
-          openstack loadbalancer listener show {{ listener_name }}
-          
-          # Verifica membri pool:
-          openstack loadbalancer member list {{ pool_name }}
-          
-          ⚠️  NOTA: Per accedere dall'esterno, assegna un Floating IP
-          
           ╚═══════════════════════════════════════════════════════════════════╝
-
-    # ========================================
-    # ERROR HANDLING
-    # ========================================
-    - name: Cleanup on failure
-      when: ansible_failed_result is defined
-      block:
-        - name: Remove partially created resources
-          openstack.cloud.loadbalancer:
-            name: "{{ lb_name }}"
-            state: absent
-            wait: yes
-          ignore_errors: yes
-
-        - name: Log cleanup
-          debug:
-            msg: "⚠️  Errore rilevato. Risorse parzialmente create sono state eliminate."
